--- a/HomeAssistantPoc/HomeAssistantPoc/Components/App.razor
+++ b/HomeAssistantPoc/HomeAssistantPoc/Components/App.razor
@@ -15,6 +15,18 @@
 <body>
     <Routes />
     <script src="_framework/blazor.web.js"></script>
+
+    <!-- Captura a url base quando estiver dentro de um iFrame -->
+    <script>
+        window.onload = function () {
+            var referrer = document.referrer;
+            if (referrer) {
+                var base = document.getElementsByTagName('base')[0];
+                base.href = new URL(referrer).pathname;
+            }
+        };
+    </script>
+
 </body>
 
 </html>
